[tool.poetry]
name = "home-resource-monitor"
version = "0.1.0"
description = "A simple app to plot and analyze home resources (gas, electricity)"
authors = ["Alexander Zech <alexzech777@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
mypy = "^1.8.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
